# chessbik

./: Cargo.toml  README.md  index.html
assets/: bishop.stl  king.stl  knight.stl  mage.stl  pawn.stl  queen.stl  rook.stl  rotator.stl
bevy-orbit-controls/: Cargo.toml
bevy-orbit-controls/src/: lib.rs
bevy_mod_picking/src/: selection.rs
js/: disable_ctx_menu.js  read_clip.js  write_clip.js
src/: app_labels.rs  app_materials.rs  app_state.rs  available_moves_indication_system.rs  available_moves_indicator.rs  board_reference.rs  board_to_cube_transforms.rs  camera_control_system.rs  cell.rs  commons.rs  consts.rs  cube.rs  cube_transform.rs  custom_picking_plugin.rs  default_cube.rs  events.rs  field_reference.rs  field_to_cube_transforms.rs  game_record.rs  main.rs  moving_system.rs  piece.rs  selection_system.rs
src/app_assets/: mod.rs  pieces_materials.rs  pieces_meshes.rs
src/app_assets/impls/: mod.rs
src/app_assets/planes_materials/: materials_for_sides.rs  mod.rs
src/app_materials/: material_ty.rs  mod.rs  pieces_materials.rs
src/app_materials/cells_materials/: materials_for_sides.rs  mod.rs
src/app_materials/impls/: mod.rs
src/field/: eval.rs  field_new.rs  field_print_debug.rs  get_available_moves.rs  mod.rs  piece_move.rs  piece_position.rs  shape_geodesic_field.rs
src/initialization_plugin/: get_piece_material.rs  get_piece_stl.rs  mod.rs  spawn_camera.rs  spawn_cube.rs  spawn_cube_side.rs  spawn_cube_side_cells.rs  spawn_lights.rs
src/plugins/: mod.rs
src/plugins/app_assets_plugin/: initialize_app_assets.rs  mod.rs
src/plugins/available_moves_indication_plugin/: indication.rs  indicator.rs  mod.rs
src/plugins/camera_plugin/: mod.rs  override_input_system.rs  spawn_system.rs
src/plugins/copy_lobby_plugin/: mod.rs  regular.rs  wasm.rs
src/plugins/cube_plugin/: compute_board_difference.rs  cube_display.rs  game_record_tracker.rs  mod.rs
src/plugins/cube_rotation_plugin/: menu.rs  mod.rs  spawn_mage_rotation_indicator.rs  spawn_rotators.rs  update_displayers.rs  update_mage_rotation_indicator.rs  update_rotation_state.rs  update_rotators.rs
src/plugins/custom_picking_plugin/: mesh_selection.rs  mod.rs
src/plugins/disable_ctx_menu_plugin/: mod.rs
src/plugins/join_game_from_clipboard_plugin/: handle_events.rs  mod.rs
src/plugins/make_move_plugin/: handle_event.rs  mod.rs
src/plugins/menu_plugin/: configure_visuals.rs  menu_system.rs  mod.rs
src/plugins/new_game_plugin/: handle_event.rs  mod.rs
src/plugins/player_name_plugin/: initialize_buffer.rs  mod.rs
src/plugins/player_token_plugin/: initialize_buffer.rs  mod.rs
src/plugins/resources_plugin/: initialize_app_materials.rs  mod.rs
src/plugins/selection_plugin/: mod.rs  selection.rs
src/plugins/sides_lights_plugin/: mod.rs  spawn_lights.rs
src/plugins/ui_join_game_plugin/: mod.rs  (+2 more)
(+50 files in other folders)
