[package]
name = "chessbik"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = "0.7"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", branch = "release" }
bevy-inspector-egui = "*"
bevy_stl = "*"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras" }
lazy_static = "*"
derive_more = "*"

chessbik-commons = { git = "https://github.com/necromfox/chessbik-commons" }
chessbik-board = { git = "https://github.com/necromfox/chessbik-board"}

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
