[package]
name = "chessbik"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "=0.7"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", branch = "release" }
bevy-inspector-egui = "*"
bevy_stl = "*"
bevy_egui = "^0.14.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras" }
lazy_static = "*"
derive_more = "*"
serde_json = "*"
egui_extras = "*"

chessbik-derive-wrapper = { git = "https://github.com/necromfox/chessbik-derive-wrapper" }
chessbik-commons = { git = "https://github.com/necromfox/chessbik-commons" }
chessbik-board = { git = "https://github.com/necromfox/chessbik-board"}

[target."cfg(target_arch = \"wasm32\")".dependencies]
web-sys = { version = "*", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Window",
    "Permissions",
    "Navigator"
] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
js-sys = "*"
wasm-rs-shared-channel = "*"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
clipboard = "^0.5.0"
async-tungstenite = { version = "*", features = ["async-std-runtime", "async-tls"]}
futures-util = "*"
async-std = "*"
futures = "*"
crossbeam-channel = "*"

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
